--- a/src/panels/main/Profile/Profile.module.css
+++ b/src/panels/main/Profile/Profile.module.css
@@ -62,20 +62,22 @@
     grid-area: logo;
     display: grid;
     align-items: center;
-    grid-template-columns: 1fr 1.5fr;
-    grid-gap: 20px;
-    margin: auto 5px 20px;
+    grid-template-columns: 1fr 1.5fr 32px;
+    margin: auto 5px 0;
 }
 
 .logo img {
     margin-left: auto;
-    margin-right: 0;
+    margin-right: auto;
+    margin-bottom: 20px;
+
 }
 
-.logo div {
+.logo_text {
     text-align: left;
     padding-right: 5px;
     width: 80%;
+    margin-bottom: 20px;
 }
 
 .background {
@@ -110,6 +112,103 @@
     transform: rotate(-110.67deg);
 }
 
+.settings {
+    width: 33px;
+    height: 33px;
+    margin: auto 5px 0 0;
+
+    background: url("../../../img/profile/ic_gear.svg") no-repeat;
+    filter: drop-shadow(0px 4px 45px rgba(0, 0, 0, 0.4));
+
+}
+
+.active {
+    animation: rotate2 var(--animation_time) ease-out;
+}
+
+.disabled {
+    animation: rotate var(--animation_time) ease-in-out;
+}
+
+.settings_window {
+    z-index: 1000;
+    height: min-content;
+    width: min-content;
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    top: 75%;
+    left: 10%;
+    margin: 20px;
+
+    animation: slide_up var(--animation_time) linear;
+}
+
+.settings_item {
+    height: 40px;
+    width: 250px;
+    margin: 2px;
+    border-radius: 25px;
+    background-color: white;
+    text-align: center;
+    line-height: 40px;
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.15);
+}
+
+
+.hidden {
+    animation: slide_down var(--animation_time) linear forwards;
+    z-index: 1000;
+    height: min-content;
+    width: min-content;
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    top: 75%;
+    left: 10%;
+    margin: 20px;
+}
+
+.profile_card {
+    --animation_time: 200ms;
+}
+
+@keyframes rotate {
+    from {
+        -webkit-transform: rotate(0deg);
+    }
+    to {
+        -webkit-transform: rotate(45deg);
+    }
+}
+
+@keyframes rotate2 {
+    from {
+        -webkit-transform: rotate(0deg);
+    }
+    to {
+        -webkit-transform: rotate(-45deg);
+    }
+}
+
+@keyframes slide_up {
+    from {
+        -webkit-transform: translate(50%, 60%) scale(0.001) skew(15deg, 15deg);
+    }
+    to {
+        -webkit-transform: translate(0, 0) skew(0) scale(1);
+    }
+}
+
+@keyframes slide_down {
+    from {
+        -webkit-transform: translate(0, 0) skew(0) scale(1);
+    }
+    to {
+        -webkit-transform: translate(50%, 60%) scale(0.001) skew(15deg, 15deg);
+    }
+}
+
 
 @media screen and (max-device-height: 600px){
     .profile_card {
@@ -119,6 +218,10 @@
         height: min-content;
         grid-template-rows: 120px 320px 80px;
 
+    }
+
+    .settings {
+        margin-bottom: 20px;
     }
 
 }
