--- a/src/panels/main/Profile/Profile.module.css
+++ b/src/panels/main/Profile/Profile.module.css
@@ -137,7 +137,7 @@
     display: flex;
     flex-direction: column;
     position: absolute;
-    top: 75%;
+    top: 76%;
     left: 10%;
     margin: 20px;
 
@@ -155,18 +155,12 @@
     box-shadow: 0 4px 30px rgba(0, 0, 0, 0.15);
 }
 
+.hidden_no_animation {
+    display: none;
+}
 
 .hidden {
     animation: slide_down var(--animation_time) linear forwards;
-    z-index: 1000;
-    height: min-content;
-    width: min-content;
-    display: flex;
-    flex-direction: column;
-    position: absolute;
-    top: 75%;
-    left: 10%;
-    margin: 20px;
 }
 
 .profile_card {
