--- a/src/panels/main/Profile/Profile.module.css
+++ b/src/panels/main/Profile/Profile.module.css
@@ -115,8 +115,10 @@
 .settings {
     width: 33px;
     height: 33px;
-    margin: auto 5px 0 0;
+    /*margin: auto 5px 0 0;*/
+    display: flex;
 
+    align-self: end;
     background: url("../../../img/profile/ic_gear.png") no-repeat;
     background-size: contain;
     filter: drop-shadow(0px 4px 45px rgba(0, 0, 0, 0.4));
