preview blured and clicks are off when answer window is actiove

--- a/src/panels/preview/Preview.module.css
+++ b/src/panels/preview/Preview.module.css
@@ -3,7 +3,20 @@
     width: 100%;
     height: 100%;
     overflow: scroll;
+}
 
+.blurred {
+    animation: blurring 150ms linear;
+    filter: blur(2px);
+}
+
+@keyframes blurring {
+    from {
+        filter: blur(0);
+    }
+    to {
+        filter: blur(2px);
+    }
 }
 
 .background {
@@ -21,7 +34,7 @@
 
 .button {
     position: fixed;
-
+    pointer-events: inherit;
     bottom: 0;
     width: 100%;
     z-index: 30;
@@ -63,6 +76,7 @@
     position: sticky;
     top: 25px;
     margin-left: 25px;
+    pointer-events: inherit;
 
 }
 
@@ -143,6 +157,20 @@
     font-size: 18px;
     outline: none;
     background: #588EFF;
+}
+
+.screen {
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 99;
+    width: 100%;
+    height: 100%;
+}
+
+.locked {
+    pointer-events: none;
 }
 
 @supports (-webkit-touch-callout: none) {
