--- a/src/panels/stickershop/fragments/StickerCard.module.css
+++ b/src/panels/stickershop/fragments/StickerCard.module.css
@@ -19,6 +19,10 @@
     color: white;
 }
 
+.button:focus {
+    outline: none
+}
+
 .card {
     background: #FFFFFF;
     box-shadow: 0 6px 17px rgba(0, 0, 0, 0.1);
