--- a/src/panels/stickershop/fragments/StickerCard.module.css
+++ b/src/panels/stickershop/fragments/StickerCard.module.css
@@ -5,7 +5,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    touch-action: manipulation;
+    touch-action: none;
 }
 
 .button {
