--- a/src/panels/stickershop/fragments/StickerCard.module.css
+++ b/src/panels/stickershop/fragments/StickerCard.module.css
@@ -5,7 +5,8 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    touch-action: none;
+    touch-action: manipulation;
+
 }
 
 .button {
@@ -18,6 +19,7 @@
     border-radius: 25px;
     background-color: #5D80FF;
     color: white;
+
 }
 
 .button:focus {
@@ -32,6 +34,8 @@
     display: flex;
     flex-direction: column;
     padding: 15px;
+    touch-action: manipulation;
+
 }
 
 .img {
@@ -39,17 +43,23 @@
     max-width: 200px;
     margin-left: auto;
     margin-right: auto;
+    touch-action: manipulation;
+
 }
 
 .status {
     margin-right: 0;
     margin-left: auto;
+    touch-action: manipulation;
+
 }
 
 .name {
     font-size: 24px;
     font-weight: 600;
     margin-bottom: 10px;
+    touch-action: manipulation;
+
 }
 
 .quote {
@@ -59,6 +69,8 @@
     white-space: pre-wrap;
     width: 65vw;
     margin-bottom: 15px;
+    touch-action: manipulation;
+
 }
 
 .control {
@@ -66,6 +78,8 @@
     margin-bottom: 1vh;
     display: flex;
     flex-direction: row;
+    touch-action: manipulation;
+
 }
 
 .hidden {
