--- a/src/panels/main/Profile/LevelFragment.module.css
+++ b/src/panels/main/Profile/LevelFragment.module.css
@@ -15,7 +15,8 @@
     grid-template-areas:"brain text";
 }
 
-.dignity img {
+.dignity svg {
+    margin: 0;
     grid-area: brain;
     height: 34px;
     width: 34px;
