--- a/src/panels/question/Question.module.css
+++ b/src/panels/question/Question.module.css
@@ -37,14 +37,14 @@
     margin: 15px auto;
 
     display: grid;
-    grid-template-rows: 1fr 4fr 1fr 0.25fr;
+    grid-template-rows: 35% 4fr 1fr 0.25fr;
     grid-template-areas: "question_text" "answer_container" "control" "slider";
 
     width: 90%;
     height: 82%;
-
+    align-items: end;
     background: linear-gradient(179.79deg, #699AFF 0.1%, #3171F7 21.78%);
-    box-shadow: 0px 0px 40px rgba(0, 0, 0, 0.25);
+    box-shadow: 0 0 40px rgba(0, 0, 0, 0.25);
     border-radius: 25px;
 
     animation: slide_up 1.4s ease;
@@ -53,11 +53,15 @@
 .question_text {
     width: 80%;
     margin: auto;
-    padding-top: 42px;
     font-size: 18px;
     text-align: center;
     padding-top: 5px;
 	z-index: 1000;
+}
+
+.animation_container {
+    position: relative;
+    top: -30%;
 }
 
 .control {
@@ -74,7 +78,7 @@
 .score_container {
     width: 100px;
     height: 36px;
-    margin: auto auto 10px;
+    margin: auto auto;
     padding: 18px;
 
     background: #FFFFFF;
@@ -94,11 +98,6 @@
     letter-spacing: -0.04em;
 
     color: #000000;
-}
-
-.score_container div:first-child{
-    margin-left: auto;
-    margin-right: auto;
 }
 
 .score {
@@ -162,13 +161,17 @@
 .wave_card {
     z-index: 1;
     width: 100%;
-    height: 200px;
+    height: 65%;
     overflow: hidden;
     position: absolute;
     bottom: 0;
 
     border-bottom-left-radius: 25px;
     border-bottom-right-radius: 25px;
+
+    background: white;
+    background-size: cover;
+
 }
 
 .wave_one {
