--- a/src/panels/question/Question.module.css
+++ b/src/panels/question/Question.module.css
@@ -55,6 +55,9 @@
 }
 
 .question_text {
+    display: flex;
+    align-self: center;
+    justify-self: center;
     width: 80%;
     margin: auto;
     font-size: 18px;
