preview image fixed

--- a/src/panels/main/Profile/LevelFragment.module.css
+++ b/src/panels/main/Profile/LevelFragment.module.css
@@ -35,7 +35,7 @@
     margin-left: 20px;
     border-radius: 25px;
     background-color: #F2F2F2;
-    color: black;
+    color: #000000;
     font-size: 11px;
     text-align: center;
     padding: 10px;
