about devs adde

--- a/src/panels/preview/fragments/Answer.module.css
+++ b/src/panels/preview/fragments/Answer.module.css
@@ -28,7 +28,7 @@
 }
 
 .exit {
-    background: url("../../../img/answer/exit.svg") no-repeat;
+    background: url("../../../img/preview/answer/exit.svg") no-repeat;
     margin: 25px auto auto;
     height: 20px;
     width: 20px;
