--- a/src/panels/question/fragments/AnswerItemFragment.module.css
+++ b/src/panels/question/fragments/AnswerItemFragment.module.css
@@ -47,6 +47,8 @@
     display: flex;
     align-items: center;
     letter-spacing: -0.04em;
+}
+
 @media screen and (min-device-height: 750px) {
     .answer_item {
         margin: 20px auto;
