dev merged into refactoring

--- a/src/panels/main/Main.module.css
+++ b/src/panels/main/Main.module.css
@@ -42,7 +42,7 @@
     z-index: -1;
     width: 100%;
     height: 100%;
-    background-image: url("../../img/news/bacj.svg");
+    background-image: url("../../img/testlist/bacj.svg");
     background-repeat: no-repeat;
     background-size: cover;
     touch-action: manipulation;
