--- a/src/common/components/backbutton/BackButton.module.css
+++ b/src/common/components/backbutton/BackButton.module.css
@@ -12,6 +12,10 @@
     filter: drop-shadow(2px 4px 4px rgba(0, 0, 0, 0.25));
 }
 
+.button:active {
+    background-color: #BFBFBF;
+}
+
 .button:focus {
     outline: 0;
 }
