--- a/src/panels/preview/fragments/Answer.module.css
+++ b/src/panels/preview/fragments/Answer.module.css
@@ -28,14 +28,18 @@
 }
 
 .exit {
-    background: url("../../../img/preview/answer/exit.svg") no-repeat;
-    margin: 25px auto auto;
-    height: 20px;
-    width: 20px;
+    background: url("../../../img/preview/answer/exit.svg") no-repeat center;
+    margin: 20px auto auto;
+    height: 25px;
+    width: 25px;
     outline: none;
     border: none;
     text-decoration: none;
+    border-radius: 25px;
+}
 
+.exit:active {
+    background-color: #BFBFBF;
 }
 
 .exit:hover {
