--- a/src/panels/result/Result.module.css
+++ b/src/panels/result/Result.module.css
@@ -187,6 +187,8 @@
 
 .first_button:active {
     background-color: white;
+    color: black;
+    border: 1px solid #588EFF;
 }
 
 .first_button div {
@@ -210,6 +212,7 @@
 
 .second_button:active {
     background-color: #588EFF;
+    color: #F3FDFF;
 }
 
 .second_button div {
