--- a/src/common/components/backheader/BackHeader.module.css
+++ b/src/common/components/backheader/BackHeader.module.css
@@ -1,3 +1,10 @@
+.header {
+    border-radius: 0 0 25px 25px;
+    height: 80px;
+    width: 100%;
+    background-color: #5E80FF;
+}
+
 .exit_button {
     height: 25px;
     width: 10px;
@@ -8,34 +15,24 @@
     position: relative;
     background-size: contain;
     left: 20px;
-    top: 60px;
+    top: 50%;
 }
 
 .exit_button:focus {
     outline: 0;
 }
 
-.header {
-    border-radius: 0 0 25px 25px;
-    height: 100px;
-    width: 100%;
-    background-color: #5E80FF;
-}
+/*@supports (-webkit-touch-callout: none) {*/
+/*    !* CSS specific to iOS devices *!*/
 
-@supports (-webkit-touch-callout: none) {
-    /* CSS specific to iOS devices */
-    .header {
-        height: 100px;
-    }
+/*    .exit_button {*/
+/*        top: 50%;*/
 
-    .exit_button {
-        top: 55px;
-
-        /*height: 25px;*/
-        /*!*width: 10px;*!*/
-        /*position: relative;*/
-        /*background-size: contain;*/
-        /*top: 50px;*/
-        /*left: 20px;*/
-    }
-}
+/*        !*height: 25px;*!*/
+/*        !*!*width: 10px;*!*!*/
+/*        !*position: relative;*!*/
+/*        !*background-size: contain;*!*/
+/*        !*top: 50px;*!*/
+/*        !*left: 20px;*!*/
+/*    }*/
+/*}*/
