question status icon changed

--- a/src/panels/main/testList/task.module.css
+++ b/src/panels/main/testList/task.module.css
@@ -101,7 +101,7 @@
     font-style: normal;
     font-weight: normal;
     font-size: 14px;
-    text-shadow: 0 4px 6px #34ABB5;
+    /*text-shadow: 0 4px 6px #34ABB5;*/
 
     position: relative;
     top: -20px;
@@ -110,6 +110,14 @@
 .start_button:active {
     background-size: 150px 150px;
     background: #3256E0 url("../../../img/testlist/button_pressed.svg") no-repeat center;
+}
+
+.disabled {
+    background-color: #BEBEBE;
+}
+
+.disabled:active {
+    background-color: #BEBEBE;
 }
 
 @media screen and (max-device-height: 600px){
