--- a/src/panels/stickershop/StickerShop.module.css
+++ b/src/panels/stickershop/StickerShop.module.css
@@ -5,7 +5,7 @@
     display: -ms-grid;
     z-index: 1;
     display: grid;
-    grid-template-rows: min-content 12vh 1fr;
+    grid-template-rows: 8vh 1fr;
     justify-items: center;
     align-items: center;
     align-content: center;
@@ -59,7 +59,7 @@
 
 .sticker_container {
     width: 100vw;
-    height: 80vh;
+    height: 100%;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -94,8 +94,9 @@
 }
 
 @media screen and (max-device-height: 600px) {
-    .container {
-        grid-template-rows: 100px 12vh 1fr;
+    .sticker_container {
+        align-items: start;
     }
 }
+
 
