css fixed for sticker shop

--- a/src/panels/stickershop/StickerShop.module.css
+++ b/src/panels/stickershop/StickerShop.module.css
@@ -96,6 +96,10 @@
     .sticker_container {
         align-items: start;
     }
+
+    .container {
+        grid-template-rows: 8vh 1fr;
+    }
 }
 
 
