--- a/src/panels/stickershop/StickerShop.module.css
+++ b/src/panels/stickershop/StickerShop.module.css
@@ -5,7 +5,7 @@
     display: -ms-grid;
     z-index: 1;
     display: grid;
-    grid-template-rows: 12vh 1fr;
+    grid-template-rows: 14vh 1fr;
     justify-items: center;
     align-items: center;
     align-content: center;
@@ -63,7 +63,7 @@
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    align-items: center;
+    align-items: start;
     flex-grow: 1;
     flex-shrink: 0;
     -webkit-box-orient: horizontal;
