--- a/src/panels/question/Question.module.css
+++ b/src/panels/question/Question.module.css
@@ -123,7 +123,7 @@
     padding: 8px 16px;
     border-radius: 25px;
     text-decoration: none;
-    font-family: Titillium Web, sans-serif;
+    font-family: "Roboto", sans-serif;
     font-style: normal;
     font-weight: bold;
     font-size: 15px;
