--- a/src/panels/admin/test_creation/TestCreation.module.css
+++ b/src/panels/admin/test_creation/TestCreation.module.css
@@ -67,25 +67,69 @@ input[type="file"] {
 }
 
 .time_limit_item {
+    height: 35px;
     display: flex;
     flex-direction: row;
-    margin-bottom: 10px;
+    font-size: 18px;
 }
 
 
 .time_limit_item > input {
-    height: 25px;
-    width: 25px;
-    border-radius: 8px;
+    display: flex;
+    align-self: center;
+    height: 0;
+    width: 0;
+    visibility: hidden;
 }
 
 .time_limit_item > label {
     margin: 0 10px 0;
-    align-self: center;
+    height: min-content;
+    width: min-content;
+    white-space: nowrap;
+    text-align: center;
+}
+
+.time_limit_item > input:checked + label::before {
+    background-color: #4B71FF;
+}
+
+.time_limit_item > label::before {
+    content: '';
+    display: inline-block;
+    position: relative;
+    top: 0.25em;
+    width: 25px;
+    height: 25px;
+    flex-shrink: 0;
+    flex-grow: 0;
+    border: 1px solid #4B71FF;
+    border-radius: 8px;
+    margin-right: 0.5em;
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: 50% 50%;
 }
 
 .time_limit_item > div > select {
     margin-right: 10px;
+}
+
+.select {
+    margin-top: 0.25em;
+}
+
+.select > select {
+    height: 35px;
+    width: 45px;
+    border: 1px solid #E1E1E1;
+    border-radius: 8px;
+    background-color: white;
+    color: #707070;
+}
+
+.select > select:hover {
+    outline: none;
 }
 
 
@@ -122,4 +166,19 @@ input[type="file"] {
     -ms-transform: rotate(180deg);
     -o-transform: rotate(180deg);
     transform: rotate(180deg);
+}
+
+@media screen and (max-device-width: 366px) {
+    .time_limit_item {
+        flex-direction: column;
+    }
+
+    .select {
+        margin-top: 15px;
+        margin-left: 45px;
+    }
+
+    .next {
+        margin-top: 10vh;
+    }
 }
