--- a/src/panels/admin/questioncreation/QuestionCreation.module.css
+++ b/src/panels/admin/questioncreation/QuestionCreation.module.css
@@ -113,11 +113,14 @@
     left: 0;
     width: 100%;
     height: 100%;
+
 }
 
 .edit_window {
-    width: 200px;
-    height: 100px;
-    background-color: black;
+    position: relative;
+    z-index: 1001;
+    display: block;
+    width: min-content;
+    height: min-content;
 }
 
