input counter fixed

--- a/src/common/components/input/Input.module.css
+++ b/src/common/components/input/Input.module.css
@@ -14,9 +14,10 @@
 
 .counter {
     position: relative;
-    width: 45px;
+    width: min-content;
+    white-space: nowrap;
     top: -25px;
-    left: 82%;
+    left: 75%;
     color: #C4C4C4;
     font-size: 14px;
 }
