--- a/src/panels/admin/questioncreation/fragments/ModalAnswersCreation.module.css
+++ b/src/panels/admin/questioncreation/fragments/ModalAnswersCreation.module.css
@@ -1,10 +1,10 @@
 .container {
     width: 100vw;
-    height: 100vh;
+    height: calc(100vh - 50px);
     overflow: scroll;
     display: flex;
     flex-direction: column;
-    align-items: end;
+    padding-top: 50px;
 }
 
 .content {
@@ -12,6 +12,7 @@
     height: min-content;
     margin-left: auto;
     margin-right: auto;
+    margin-bottom: 50px;
 }
 
 .input_title {
@@ -21,4 +22,23 @@
 
 .input {
     margin-bottom: 20px;
+}
+
+.right_answer_choice {
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
+}
+
+.select > select {
+    height: 35px;
+    width: 45px;
+    border: 1px solid #E1E1E1;
+    border-radius: 8px;
+    background-color: white;
+    color: #707070;
+}
+
+.select > select:hover {
+    outline: none;
 }
