--- a/src/common/components/modalwindow/ModalWindow.module.css
+++ b/src/common/components/modalwindow/ModalWindow.module.css
@@ -3,6 +3,7 @@
     width: 100vw;
     height: min-content;
     border-radius: 25px 25px 0 0;
+    box-shadow: 0px 0px 30px rgba(0, 0, 0, 0.25);
 }
 
 .slider_wrapper {
