--- a/src/panels/main/testList/task.module.css
+++ b/src/panels/main/testList/task.module.css
@@ -120,6 +120,42 @@
     background-color: #BEBEBE;
 }
 
+.delete_button {
+    position: relative;
+    display: block;
+    top: calc(-80px - 1em - 15px - 160px + 10px);
+    right: -73vw;
+    height: 40px;
+    width: 40px;
+    border-radius: 40px;
+    background-color: #FF5353;
+}
+
+.delete_button::before {
+    content: "";
+    position: relative;
+    display: block;
+    width: 24px;
+    height: 4px;
+    top: calc(50% - 3px);
+    left: calc(50% - 12px);
+
+    background-color: white;
+}
+
+.status_icon {
+    position: relative;
+    display: block;
+    height: 38px;
+    width: 38px;
+    border-radius: 38px;
+    top: calc(-80px - 1em - 15px - 160px - 5px);
+    left: 10px;
+
+    background: white url("../../../img/testlist/ic_clock.png") no-repeat center;
+    background-size: 24px 24px;
+}
+
 @media screen and (max-device-height: 600px){
     .card {
         grid-template-rows: 110px min-content;
