--- a/src/panels/main/testList/testList.module.css
+++ b/src/panels/main/testList/testList.module.css
@@ -19,6 +19,26 @@
     display: none; /* Safari and Chrome */
 }
 
+.add_button {
+    position: absolute;
+    z-index: 10;
+    width: 50px;
+    height: 50px;
+    border-radius: 50px;
+
+    top: calc(100% - 70px);
+    left: calc(50% - 25px);
+
+    background: white url("../../../img/testlist/ic_cross.png") no-repeat center;
+    background-size: 28px 28px;
+
+    filter: drop-shadow(0px 4px 45px rgba(0, 0, 0, 0.4));
+}
+
+.add_button:active {
+    background-color: #BEBEBE;
+}
+
 
 
 
