--- a/src/panels/main/Main.module.css
+++ b/src/panels/main/Main.module.css
@@ -34,18 +34,17 @@
     display: grid;
     align-content: center;
     touch-action: manipulation;
-
 }
 
 .background {
-    position: absolute;
+    position: fixed;
     z-index: -1;
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
     background-image: url("../../img/testlist/bacj.svg");
     background-repeat: no-repeat;
     background-size: cover;
-    touch-action: manipulation;
+    touch-action: none;
 }
 
 
