--- a/src/panels/main/testList/task.module.css
+++ b/src/panels/main/testList/task.module.css
@@ -1,6 +1,6 @@
 .card {
     grid-area: card;
-    height: min-content;
+    height: 270px;
     width: 82vw;
     display: grid;
     grid-template-rows: 160px calc(80px + 1em + 15px);
@@ -122,16 +122,23 @@
 
 .delete_button {
     position: relative;
+    height: 0;
+    width: 0;
+}
+
+.delete_button > div {
+    position: relative;
+    z-index: 100;
     display: block;
-    top: calc(-80px - 1em - 15px - 160px + 10px);
-    right: -73vw;
+    top: calc(-130px - 1em - 15px - 160px);
+    right: -75vw;
     height: 40px;
     width: 40px;
     border-radius: 40px;
     background-color: #FF5353;
 }
 
-.delete_button::before {
+.delete_button > div::before {
     content: "";
     position: relative;
     display: block;
@@ -145,11 +152,17 @@
 
 .status_icon {
     position: relative;
+    height: 0;
+    width: 0;
+}
+
+.status_icon > div {
+    position: relative;
     display: block;
     height: 38px;
     width: 38px;
     border-radius: 38px;
-    top: calc(-80px - 1em - 15px - 160px - 5px);
+    top: calc(-105px - 1em - 15px - 160px - 5px);
     left: 10px;
 
     background: white url("../../../img/testlist/ic_clock.png") no-repeat center;
