--- a/src/panels/stickershop/StickerShop.module.css
+++ b/src/panels/stickershop/StickerShop.module.css
@@ -63,7 +63,7 @@
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    align-items: start;
+    align-items: flex-start;
     flex-grow: 1;
     flex-shrink: 0;
     -webkit-box-orient: horizontal;
