--- a/src/panels/stickershop/StickerShop.module.css
+++ b/src/panels/stickershop/StickerShop.module.css
@@ -65,7 +65,6 @@
     align-items: center;
     margin: 10px;
     border-radius: 25px;
-    color: white;
     background-color: white;
 }
 
@@ -105,6 +104,15 @@
     width: 10vw;
     touch-action: manipulation;
 
+}
+
+.window {
+    position: absolute;
+    z-index: 1000;
+    top: 0;
+    left: 0;
+    width: min-content;
+    height: min-content;
 }
 
 
